--- a/Assets/GondrLib/ObjectPool/Editor/ObjectPool.EditorAssembly.asmdef
+++ b/Assets/GondrLib/ObjectPool/Editor/ObjectPool.EditorAssembly.asmdef
@@ -1,4 +1,40 @@
 {
-	"name": "ObjectPool.EditorAssembly",
-	"references":[ "GUID:21ca31bc5a59ae544b1e980a7a07c68c" ]
+    "name": "ObjectPool.EditorAssembly",
+    "rootNamespace": "",
+    "references": [
+        "GUID:21ca31bc5a59ae544b1e980a7a07c68c"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [
+        "Android",
+        "Editor",
+        "EmbeddedLinux",
+        "iOS",
+        "LinuxStandalone64",
+        "CloudRendering",
+        "macOSStandalone",
+        "Switch",
+        "PS4",
+        "PS5",
+        "QNX",
+        "ReservedCFE",
+        "tvOS",
+        "WSA",
+        "VisionOS",
+        "WebGL",
+        "WindowsStandalone32",
+        "WindowsStandalone64",
+        "WindowsStandalone32Server",
+        "WindowsStandalone64Server",
+        "GameCoreXboxOne",
+        "XboxOne",
+        "GameCoreScarlett"
+    ],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
